@@ -123,14 +123,44 @@ unmarshaller.unmarshal(...);</code-panel>
 XMLClassDescriptorResolver classDescriptorResolver = (XMlClassDescriptorResolver)
    ClassDescriptorResolverFactory.createClassDescriptorResolver(BindingType.XML);
 classDescriptorResolver.setClassLoader(...);
-classDescriptorResolver.loadClassDescriptors("your.package.name");</code-panel>
+classDescriptorResolver.addPackage("your.package.name");</code-panel>
 
-        <p>and then reuse this instance as shown above.</p>
+        <p>and then reuse this instance as shown above. The <tt>XMLClassDescriptorResolver</tt>
+           interface provides various other methods to load class descriptors for individual
+           classes and/or packages.</p>
+           
+        <ctable>
+        	<cheader>
+        		<td>Method</td>
+        		<td>Description</td>
+        		<td>.castor.cdr</td>
+        	</cheader>
+        	<crow>
+        		<td><tt><api class="org.exolab.castor.xml.Marshaller">addClass(String)</api></tt></td>
+        		<td>Loads the class descriptor for one class.</td>
+        		<td>n/a</td>
+        	</crow>
+        	<crow>
+        		<td><tt><api class="org.exolab.castor.xml.Marshaller">addClass(String[])</api></tt></td>
+        		<td>Loads the class descriptors for a collection of classes.</td>
+        		<td>n/a</td>
+        	</crow>
+        	<crow>
+        		<td><tt><api class="org.exolab.castor.xml.Marshaller">addPackage(String)</api></tt></td>
+        		<td>Loads the class descriptor for all classes in the defined package.</td>
+        		<td>Required</td>
+        	</crow>
+        	<crow>
+        		<td><tt><api class="org.exolab.castor.xml.Marshaller">addPackages(String[])</api></tt></td>
+        		<td>Loads the class descriptor for all classes in the defined packages.</td>
+        		<td>Required</td>
+        	</crow>
+        </ctable>
         
-        <note>This functionality will only work if you provide the <tt>.castor.cdr</tt>
-              file with your generated classes (as generated by the XML code generator). If
-              no such file is shipped, Castor will not be able to pre-load the descriptors, and 
-              will fall back to its default descriptor loading mechanism.</note>
+        <note>For some of the methods, pre-loading class descriptords will only work if you provide 
+              the <tt>.castor.cdr</tt> file with your generated classes (as generated by the XML 
+              code generator). If no such file is shipped, Castor will not be able to pre-load the 
+              descriptors, and will fall back to its default descriptor loading mechanism.</note>
         
 
     </section>
