@@ -125,9 +125,29 @@ public interface XMLClassDescriptorResolver extends ClassDescriptorResolver {
     void setClassLoader(ClassLoader loader);
    
     /**
+     * Loads the class descriptor for the class instance specified. The use of this method is useful
+     * when no mapping is used, as happens when the domain classes hase been generated
+     * using the XML code generator (in which case instead of a mapping file class
+     * descriptor files will be generated).
+     * 
+     * @param className Name of the class for which the associated descriptor should be loaded.
+     */ 
+    public void addClass(final String className); 
+
+    /**
+     * Loads the class descriptors for the class instances specified. The use of this method is useful
+     * when no mapping is used, as happens when the domain classes hase been generated
+     * using the XML code generator (in which case instead of a mapping file class
+     * descriptor files will be generated).
+     * 
+     * @param classNames Names of the classes for which the associated descriptors should be loaded.
+     */ 
+    public void addClasses(final String[] classNames);
+
+    /**
      * Loads class descriptors from the package specified. The use of this method is useful
      * when no mapping is used, as happens when the domain classes hase been generated
-     * using the XML code generator (in which case instead of a mpping file class
+     * using the XML code generator (in which case instead of a mapping file class
      * descriptor files will be generated).
      * <p>
      * Please note that this functionality will work only if you provide the <tt>.castor.cdr</tt>
@@ -135,6 +155,35 @@ public interface XMLClassDescriptorResolver extends ClassDescriptorResolver {
      * <p>
      * @param packageName The package name for the (descriptor) classes
      * @throws ResolverException If there's a problem loading class descriptors for the given package. 
+     */
+    public void addPackage(final String packageName) throws ResolverException;
+
+    /**
+     * Loads class descriptors from the packages specified. The use of this method is useful
+     * when no mapping is used, as happens when the domain classes hase been generated
+     * using the XML code generator (in which case instead of a mapping file class
+     * descriptor files will be generated).
+     * <p>
+     * Please note that this functionality will work only if you provide the <tt>.castor.cdr</tt>
+     * files with your generated classes (as generated by the XML code generator).
+     * <p>
+     * @param packageNames The package names for the (descriptor) classes
+     * @throws ResolverException If there's a problem loading class descriptors for the given package. 
+     */
+    public void addPackages(final String[] packageNames) throws ResolverException;
+    
+    /**
+     * Loads class descriptors from the package specified. The use of this method is useful
+     * when no mapping is used, as happens when the domain classes hase been generated
+     * using the XML code generator (in which case instead of a mapping file class
+     * descriptor files will be generated).
+     * <p>
+     * Please note that this functionality will work only if you provide the <tt>.castor.cdr</tt>
+     * file with your generated classes (as generated by the XML code generator).
+     * <p>
+     * @param packageName The package name for the (descriptor) classes
+     * @throws ResolverException If there's a problem loading class descriptors for the given package. 
+     * @deprecated Please use e.g. #addPackage(String) instead.
      */
     void loadClassDescriptors(final String packageName) 
         throws ResolverException;   
